--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,17 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.4.2</version>
+        <configuration>
+            <archive>
+                <manifest>
+                    <mainClass>it.unipd.mtss.App</mainClass>
+                </manifest>
+            </archive>
+        </configuration>
+    </plugin>
     </plugins>
   </build>
 </project>
