--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,4 +16,4 @@ jobs:
         java-version: '21'
         cache: 'maven'
     - name: Build with Maven
-      run: mvn -B install --file pom.xm
+      run: mvn -B install --file pom.xml
