--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,3 +17,7 @@ jobs:
         cache: 'maven'
     - name: Build with Maven
       run: mvn -B install --file pom.xml
+    - name: Update coveralls
+      env:
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+      run: mvn coveralls:report 
